fixed(ui): Markup: charts switcher menu has a wrong position on RTL tablet/mobile (#116)
Closes #96

--- a/src/app/page/page.component.rtl.styl
+++ b/src/app/page/page.component.rtl.styl
@@ -102,5 +102,5 @@ body
           margin-left 10px!important
 
     .chart-switcher-options
-      min-width 100px
+      left auto
       right 30px
